# lazy_tiff_reader

./: gapped_memmap.py  gapped_memmap_test.py  memmap_tiff_si.py  pyproject.toml
lazy_tiff_reader/: __init__.py  gapped_memmap.py  memmap_tiff_si.py  slices_to_offsets.py
lazy_tiff_reader/utils/: __init__.py  copy_byte_spans_between_buffers.py
tests/: test_gapped_memmap.py
utils/: get_si_tiff_n_pages.py  read_si_framedata_params.py
