[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "lazy-tiff-reader"
version = "0.1.0"
description = "Memory-mapped and lazy readers for ScanImage TIFF stacks."
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.20",
    "tifffile>=2022.8.12",
]

[project.optional-dependencies]
dev = ["pytest"]

[tool.setuptools.packages.find]
where = ["."]
include = ["lazy_tiff_reader*"]
